examples/test/testpolicy4641.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4641
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key43: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value2
          key0: value23
      podSelector:
        matchLabels:
          key18: value4
          key39: value25
